--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,13 @@ services:
     image: postgres
     restart: always
     ports:
-      - 5432:5432
+      - 8080:5432
     environment:
       - POSTGRES_USER=${DB_USER}
       - POSTGRES_PASSWORD=${DB_PASSWORD}
       - POSTGRES_DB=${DB_NAME}
+    volumes:
+      - ./.data:/var/lib/postgresql/data
 
   pgadmin:
     container_name: pgadmin
@@ -35,4 +37,3 @@ services:
     depends_on:
       - db
     restart: always
-
